Switched to flexbox for game board - fixes bug where at high zoom levels, there were gaps between rows

--- a/src/app/(components)/(game-screen)/board.module.css
+++ b/src/app/(components)/(game-screen)/board.module.css
@@ -5,19 +5,23 @@
 	width: min-content;
 	height: min-content;
 
-	border-collapse: collapse;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
 }
 
 .row {
-	display: inline-block;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: flex-start;
 
 	width: max-content;
 	height: min-content;
 }
 
 .tile {
-	display: inline-block;
-
 	padding: 0;
 	margin: 0;
 }
